--- a/Hunt.Mobile.Common/config.json
+++ b/Hunt.Mobile.Common/config.json
@@ -1,7 +1,7 @@
 ﻿{
-	"AzureFunctionsUrl": "https://huntapp.azurewebsites.net/api",
-	"AzureStorageUrl": "https://huntappstorage.blob.core.windows.net",
-	"AzureCDNUrl": "https://huntapp.azureedge.net",
-	"AppCenteriOSToken": "cc9ce6e3-a12d-427a-af56-7745ad9d0218",
-	"AppCenterAndroidToken": "4f5a3f94-5d09-4dd0-b4ba-de5e8c83bee2",
+  "AzureFunctionsUrl": "https://nkphuntapp.azurewebsites.net/api",
+  "AzureStorageUrl": "https://huntstorageaitruicccw5q2.blob.core.windows.net",
+  "AzureCDNUrl": "https://nkphuntapp-cdnendpoint.azureedge.net",
+  "AppCenteriOSToken": "51d27fcd-f9dd-40f0-80ab-ec9b3c0d0c3a",
+  "AppCenterAndroidToken": "8f33c90d-4199-4cd3-ae5d-d8bbe9969a79"
 }
