--- a/Hunt.Mobile.iOS/Info.plist
+++ b/Hunt.Mobile.iOS/Info.plist
@@ -43,7 +43,7 @@
 		<string>remote-notification</string>
 	</array>
 	<key>CFBundleIdentifier</key>
-	<string>com.microsoft.hunt</string>
+	<string>com.nkp.huntapp</string>
 	<key>CFBundleVersion</key>
 	<string>1.4</string>
 </dict>
