--- a/Hunt.Mobile.UITest/Hunt.Mobile.UITest.csproj
+++ b/Hunt.Mobile.UITest/Hunt.Mobile.UITest.csproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -40,6 +40,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+    <None Include="runtests.bat" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Hunt.Mobile.iOS\Hunt.Mobile.iOS.csproj">
